reordered .rest requests and regenerated swagger-output.json
